<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_EL2262OutData" Id="{e7a80234-2d09-4156-8d70-67a760e51a47}">
    <Declaration><![CDATA[TYPE ST_EL2262OutData :
STRUCT
	Output0 					AT%Q*:ARRAY[0..124] OF BYTE;
	Output1 					AT%Q*:ARRAY[0..124] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>